add support to bounce an email in mu4e

--- a/emacs.org
+++ b/emacs.org
@@ -1926,8 +1926,24 @@ What follows is the bulk of the configuration for mu4e.
           (message-add-header (concat "Subject: " mu4e~draft-forward-prefix subject))
           )
         )
+      (defun sf/mu4e-bounce-message (address)
+        "Bounce message at point to a recipient.
+See https://github.com/djcb/mu/pull/449/files"
+        (interactive "sBounce to: ")
+        (let ((path (plist-get (mu4e-message-at-point t) :path)))
+          (unless (and path (file-readable-p path))
+            (mu4e-error "Not a readable file: %S" path))
+          (find-file path)
+          (mu4e-compose-mode)
+          (make-local-variable 'mu4e-sent-messages-behavior)
+          (setq mu4e-sent-messages-behavior 'sent)
+          (message-resend address)
+          (kill-buffer)
+          )
+        )
       (define-key mu4e-headers-mode-map (kbd "f") 'sf/mu4e-forward-as-attachment)
       (define-key mu4e-headers-mode-map (kbd "y") 'mu4e-headers-mark-for-refile)
+      (define-key mu4e-headers-mode-map (kbd "B") 'sf/mu4e-bounce-message)
       (define-key mu4e-view-mode-map (kbd "f") 'sf/mu4e-forward-as-attachment)
       (define-key mu4e-view-mode-map (kbd "y") 'mu4e-view-mark-for-refile)
       )
