tinker with hydra jabber helper

--- a/emacs.org
+++ b/emacs.org
@@ -712,6 +712,16 @@ necessary configuration.
       (dolist (mode '(jabber-chat-mode jabber-roster-mode))
         (evil-set-initial-state mode 'emacs))
       (add-hook 'jabber-post-connect-hooks 'jabber-autoaway-start)
+      (defun sf/jabber-start-or-switch ()
+        "Connect to Jabber services"
+        (interactive)
+        (when (get-buffer "*-jabber-roster-*")
+          (jabber-connect-all))
+        (if (or nil jabber-activity-jids)
+          (jabber-activity-switch-to)
+          (jabber-switch-to-roster-buffer)
+          )
+        )
       )
     )
 #+END_SRC
@@ -1593,7 +1603,7 @@ Define a hydra to start/switch to applications or trigger miscellaneous actions.
       ("e" mu4e "email")
       ("f" elfeed "elfeed")
       ("t" twit "twitter")
-      ("j" jabber-connect-all "jabber")
+      ("j" sf/jabber-start-or-switch "jabber")
       ("m" mingus "music")
       ("s" sf/terminal "shell")
       ("p" paradox-list-packages "packages")
