comment out notmuch-remote piece

--- a/emacs.org
+++ b/emacs.org
@@ -2080,8 +2080,8 @@ Define various keybindings.
            (:name "attachment" :key "A" :query "tag:attachment")
            )
         )
-      (when (not (string= system-name sf/work-workstation))
-        (setq notmuch-command "~/bin/notmuch-remote.sh"))
+;;      (when (not (string= system-name sf/work-workstation))
+;;        (setq notmuch-command "~/bin/notmuch-remote.sh"))
       (add-to-list 'auto-mode-alist '("notmuch-raw-id" . markdown-mode))
       (add-hook 'notmuch-hello-mode-hook 'sf/nolinum)
       (add-hook 'notmuch-show-hook '(lambda () (setq show-trailing-whitespace nil)))
