--- a/emacs.org
+++ b/emacs.org
@@ -1091,6 +1091,7 @@ tree.
 
 #+BEGIN_SRC emacs-lisp
   (use-package find-file-in-project
+    :disable t
     :ensure t
     :bind ("C-c f" . find-file-in-project)
     )
