--- a/emacs.org
+++ b/emacs.org
@@ -2079,12 +2079,14 @@ Define various keybindings.
            (:name "inbox"      :key "i" :query "tag:inbox")
            (:name "flagged"    :key "f" :query "tag:flagged")
            (:name "today"      :key "t" :query "date:today..now and not tag:archive and not tag:sent")
+           (:name "3 days"     :key "3" :query "date:3d..now and not tag:archive and not tag:sent")
            (:name "7 days"     :key "7" :query "date:7d..now and not tag:archive and not tag:sent")
            (:name "announce"   :key "a" :query "tag:announce and not tag:archive")
            (:name "reports"    :key "r" :query "tag:reports")
            (:name "lists"      :key "l" :query "tag:lists and not tag:archive")
            (:name "noc"        :key "n" :query "tag:noc and not tag:archive")
            (:name "attachment" :key "A" :query "tag:attachment")
+           (:name "bulk"       :key "b" :query "not tag:archive and ( tag:bulk or tag:nts or tag:nms or tag:internet2 )")
            )
         )
 ;;      (when (not (string= system-name sf/work-workstation))
