--- a/emacs.org
+++ b/emacs.org
@@ -1094,7 +1094,7 @@ tree.
 
 #+BEGIN_SRC emacs-lisp
   (use-package find-file-in-project
-    :disable t
+    :disabled t
     :ensure t
     :bind ("C-c f" . find-file-in-project)
     )
