lots of tweaking to mu4e bookmarks

--- a/emacs.org
+++ b/emacs.org
@@ -1990,20 +1990,21 @@ What follows is the bulk of the configuration for mu4e.
         mu4e-use-fancy-chars t
         mu4e-bookmarks '(
                           ("flag:unread AND NOT flag:trashed" "Unread messages" ?u)
-                          ("date:today..now" "Today's messages" ?t)
-                          ("date:3d..now" "Last 3 days" ?3)
-                          ("date:7d..now" "Last 7 days" ?7)
+                          ("maildir:/Personal/INBOX OR maildir:/Work/INBOX" "ONE Inbox" ?I)
                           ("flag:flagged" "Flagged" ?f)
-                          ("maildir:/Personal/* AND NOT maildir:/Personal/Sent AND NOT maildir:/Personal/Trash" "Personal" ?p)
-                          ("maildir:/Work/* AND NOT maildir:/Work/Sent AND NOT maildir:/Work/Trash" "Work" ?w)
-                          ("maildir:/Work/Archive* OR maildir:/Personal/Archive" "Archive" ?a)
+                          ("date:today..now" "Today's messages" ?t)
+                          ("date:3d..now AND NOT ( maildir:/Personal/Archive OR maildir:/Work/Archive* OR maildir:/Work/Trash OR maildir:/Personal/Trash OR maildir:/Personal/Spam OR maildir:/Work/Spam )" "Last 3 days" ?3)
+                          ("date:7d..now AND NOT ( maildir:/Personal/Archive OR maildir:/Work/Archive* OR maildir:/Work/Trash OR maildir:/Personal/Trash OR maildir:/Personal/Spam OR maildir:/Work/Spam )" "Last 7 days" ?7)
+                          ("maildir:/Personal/* AND NOT ( maildir:/Personal/Spam OR maildir:/Personal/Trash )" "Personal" ?p)
+                          ("maildir:/Work/*     AND NOT ( maildir:/Work/Spam OR maildir:/Work/Trash )" "Work" ?w)
+                          ("maildir:/Personal/Archive or maildir:/Work/Archive*" "Archive" ?a)
                           ("flag:attach" "Messages with attachments" ?A)
                           ("mime:text/calendar" "Meeting invites" ?c)
                           )
         mu4e-headers-actions '(
-                               ("capture message" . mu4e-action-capture-message)
-                               ("show thread"     . mu4e-action-show-thread)
-                               )
+                                ("capture message" . mu4e-action-capture-message)
+                                ("show thread"     . mu4e-action-show-thread)
+                                )
         mu4e-view-actions '(
                              ("capture message" . mu4e-action-capture-message)
                              ("tag message"     . mu4e-action-retag-message)
